[BZ #1392]

2005-09-29  Roland McGrath  <roland@redhat.com>
	[BZ #1392]
	* posix/sys/wait.h [!__GNUC__ || __cplusplus] (__WAIT_INT): Use const.